plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://www.jitpack.io')
    }

    maven {
        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://repo.extendedclip.com/content/repositories/placeholderapi/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    api 'com.thenexusreborn:NexusAPI:1.15-ALPHA'
    api 'com.github.StarDevelopmentLLC:units:0.1.0'
    implementation('net.dv8tion:JDA:5.2.0') {
        exclude module: 'opus-java'
    }
    api 'org.slf4j:slf4j-nop:2.0.16'
    compileOnly 'com.github.StarDevelopmentLLC:StarCore:0.1.7'
    compileOnly 'com.github.StarDevelopmentLLC:StarChat:0.1.2'
    compileOnly 'me.clip:placeholderapi:2.11.5'
    compileOnly 'org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT'
}

shadowJar {
    dependencies {
        exclude(dependency('com.github.StarDevelopmentLLC:StarLib:1.0.0-alpha.25'))
    }
}

group = 'com.thenexusreborn'
version = '1.14-ALPHA'
description = 'NexusCore'

processResources {
    filesMatching("*.yml") {
        expand(project.properties)
    }
}

shadowJar {
    archiveClassifier.set('')
    destinationDirectory = file(System.getProperty("user.home") + File.separator + "Documents" + File.separator + "JarOutput" + File.separator + "NexusReborn")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

publishing {
    publications {
        shadow(MavenPublication) { publication ->
            project.shadow.component(publication)
        }
    }
}

tasks.jar.finalizedBy(shadowJar)
tasks.publishToMavenLocal.dependsOn(shadowJar)
tasks.compileJava.dependsOn(clean)